--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
 
 <body>
-	<p>Table of content</p>
+	<p>Table of contents:</p>
 	<ol>
 		<li>
 			<a href="https://smonroy.com/pacman">Pacman</a>
