added slot machine link

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 		<li>
 			<a href="https://smonroy.com/COMP397-F2018-Lesson1">Web Game Development classwork</a>
 		</li>
+		<li>
+			<a href="https://smonroy.com/WebGameProgramming_SlotMachine">Web Game Development Slot Macnihe</a>
+		</li>
 	</ol>
-	
 </body>
 </html>
