Options names changed

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 			<a href="https://smonroy.com/pacman">Pacman</a>
 		</li>
 		<li>
-			<a href="https://smonroy.com/tanks">Tanks</a>
+			<a href="https://smonroy.com/WebGameProgramming_SlotMachine">Slot Macnihe</a>
+		</li>
+		<li>
+			<a href="https://smonroy.com/tanks">Tanks (not finished)</a>
 		</li>
 		<li>
 			<a href="https://smonroy.com/COMP397-F2018-Lesson1">Web Game Development classwork</a>
-		</li>
-		<li>
-			<a href="https://smonroy.com/WebGameProgramming_SlotMachine">Web Game Development Slot Macnihe</a>
 		</li>
 	</ol>
 </body>
