--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<a href="https://smonroy.com/pacman">Pacman</a>
 		</li>
 		<li>
-			<a href="https://smonroy.com/WebGameProgramming_SlotMachine">Slot Macnihe</a>
+			<a href="https://smonroy.com/WebGameProgramming_SlotMachine">Slot Machine</a>
 		</li>
 		<li>
 			<a href="https://smonroy.com/tanks">Tanks (not finished)</a>
