--- a/index.1.html
+++ b/index.1.html
@@ -4,6 +4,7 @@
 	
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
     <meta name="author" content="Sergio Monroy" />
+	
     <title>Sergio Monroy</title>
 	
   </head>
@@ -12,7 +13,16 @@
 	<p>Table of contents:</p>
 	<ol>
 		<li>
-			<a href="https://smonroy.com/games">Games and small projects</a>
+			<a href="https://smonroy.com/pacman">Pacman</a>
+		</li>
+		<li>
+			<a href="https://smonroy.com/WebGameProgramming_SlotMachine">Slot Machine</a>
+		</li>
+		<li>
+			<a href="https://smonroy.com/tanks">Tanks (not finished)</a>
+		</li>
+		<li>
+			<a href="https://smonroy.com/COMP397-F2018-Lesson1">Web Game Development classwork</a>
 		</li>
 	</ol>
 </body>
