--- a/games/index.html
+++ b/games/index.html
@@ -4,15 +4,26 @@
 	
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
     <meta name="author" content="Sergio Monroy" />
+	
     <title>Sergio Monroy</title>
 	
   </head>
 
 <body>
+	<h1>Games and small projects</h1>
 	<p>Table of contents:</p>
 	<ol>
 		<li>
-			<a href="https://smonroy.com/games">Games and small projects</a>
+			<a href="https://smonroy.com/pacman">Pacman</a>
+		</li>
+		<li>
+			<a href="https://smonroy.com/WebGameProgramming_SlotMachine">Slot Machine</a>
+		</li>
+		<li>
+			<a href="https://smonroy.com/tanks">Tanks (not finished)</a>
+		</li>
+		<li>
+			<a href="https://smonroy.com/COMP397-F2018-Lesson1">Web Game Development classwork</a>
 		</li>
 	</ol>
 </body>
