--- a/games/index.html
+++ b/games/index.html
@@ -25,6 +25,9 @@
 		<li>
 			<a href="https://smonroy.com/COMP397-F2018-Lesson1">Web Game Development classwork</a>
 		</li>
+		<li>
+			<a href="https://smonroy.com/MazeMaster">MazeMaster (prototype)</a>
+		</li>
 	</ol>
 </body>
 </html>
