--- a/index.1.html
+++ b/index.1.html
@@ -16,6 +16,9 @@
 			<a href="https://smonroy.com/pacman">Pacman</a>
 		</li>
 		<li>
+			<a href="https://smonroy.com/Spider">Red Spider</a>
+		</li>
+		<li>
 			<a href="https://smonroy.com/WebGameProgramming_SlotMachine">Slot Machine</a>
 		</li>
 		<li>
