--- a/games/index.html
+++ b/games/index.html
@@ -17,13 +17,13 @@
 			<a href="https://smonroy.com/pacman">Pacman</a>
 		</li>
 		<li>
+			<a href="https://smonroy.com/Spider">Red Spider</a>
+		</li>
+		<li>
 			<a href="https://smonroy.com/WebGameProgramming_SlotMachine">Slot Machine</a>
 		</li>
 		<li>
 			<a href="https://smonroy.com/tanks">Tanks (not finished)</a>
-		</li>
-		<li>
-			<a href="https://smonroy.com/COMP397-F2018-Lesson1">Web Game Development classwork</a>
 		</li>
 		<li>
 			<a href="https://smonroy.com/MazeMaster">MazeMaster (prototype)</a>
